<resources>
    <string name="app_name">OnlineTherapist</string>
    <string name="app_logo">app_logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cf_password">Confirm Password</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="reg_submit">Submit</string>
    <string name="reg_sex">Sex</string>
    <string name="already_has_account">Already Has Account</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="therapist">Therapist</string>
    <string name="todo">TODO</string>
    <string name="calling">Calling…</string>
    <string name="patient">Patient</string>
    <string name="note_advice">Notes and advice</string>
    <string name="note_advice_therapist">Notes and advice for patients</string>
    <string name="hint_select_patient">Please select a patient</string>
    <string name="todolist">To-do lists</string>
    <string name="send_note">Send new note</string>
    <string name="create_todolistitem">Create a new to-do list item</string>
    <string name="send_todolist">Create a new to-do list item</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="title_activity_view_a_note">ViewANoteActivity</string>
    <string name="title_activity_therapist_patient_detail_view">TherapistPatientDetailView</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--  string  for the medical record-->
    <string name="medical_record">MEDICAL RECORD</string>
    <string name="therapist_name">Therapist\'s name: </string>
    <string name="patient_name">Patient\'s name: </string>
    <string name="problem">Problems: </string>
    <string name="diagnosis">Diagnosis: </string>
    <string name="treatment">Treatment/Medication: </string>
    <string name="add_todo_list">Add to-do list</string>
    <string name="add_notes">Add notes</string>
    <string name="date">Date: </string>
    <string name="save">Save</string>

</resources>