<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_edittext"
    android:layout_margin="10dp"
    android:padding="10dp"

    >


    <TextView
        android:id="@+id/tvProblem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/problem"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvDiagnosis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diagnosis"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvProblem"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDateCreated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDiagnosis"
        app:layout_constraintStart_toStartOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>