<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_invitation_new"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/incoming_call"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="2"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_account_circle"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                android:textSize="25sp"
                android:id="@+id/txtInviterName"
                android:text="@string/therapist"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/reject_call"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/todo"
                android:background="@drawable/background_deny_icon"
                android:src="@drawable/ic_deny"
                android:layout_alignParentStart="true"
                android:onClick="RejectCall"
                app:tint="@color/colorWhite" />
            <ImageButton
                android:id="@+id/accept_call"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/todo"
                android:background="@drawable/background_accept_icon"
                android:src="@drawable/ic_call"
                app:tint="@color/colorWhite"
                android:layout_alignParentEnd="true"
                android:onClick="AcceptCall"
                app:layout_constraintStart_toEndOf="parent" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
